--- a/index.html
+++ b/index.html
@@ -17,30 +17,22 @@
         <link href="assets/css/bootstrap.css" rel="stylesheet" />
         <link href="assets/css/landing-page.css" rel="stylesheet"/>
 
-        <!--     Fonts and icons     -->
-        <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400,300' rel='stylesheet' type='text/css'>
-        <link href="assets/css/pe-icon-7-stroke.css" rel="stylesheet" />
-
     </head>
     <body class="landing-page landing-page1">
-        <nav class="navbar navbar-transparent navbar-top" role="navigation">
+        <nav class="navbar navbar-transparent navbar-top" role="navigation" style="background-color: transparent;">
             <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button id="menu-toggle" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example">
                     <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar bar1"></span>
+                    <!-- <span class="icon-bar bar1"></span>
                     <span class="icon-bar bar2"></span>
-                    <span class="icon-bar bar3"></span>
+                    <span class="icon-bar bar3"></span> -->
                     </button>
                     <a href="http://www.creative-tim.com">
                         <div class="logo-container">
                             <div class="logo">
                                 <img src="assets/img/app-icon.svg" alt="Card Vault logo">
-                            </div>
-                            <div class="brand">
-                                Card Vault
                             </div>
                         </div>
                     </a>
@@ -55,8 +47,8 @@
         </nav>
         <div class="wrapper">
             <div class="parallax filter-gradient gray" data-color="#d3d3d3">
-                <div class="parallax-background">
-                    <img class="parallax-background-image" src="assets/img/template/bg4.jpg">
+                <div class="parallax-background blur">
+                    <img class="parallax-background-image" src="assets/img/template/bg5.jpg">
                 </div>
                 <div class= "container">
                     <div class="row">
@@ -78,24 +70,22 @@
                     </div>
                 </div>
             </div>
+
             <div class="section section-gray section-clients">
-                <div class="container text-center">
-                    <h4 class="header-text">Friends in high places</h4>
-                    <p>
-                        Build customer confidence by listing your users! Anyone who has used your service and has been pleased with it should have a place here! From Fortune 500 to start-ups, all your app enthusiasts will be glad to be featured in this section. Moreover, users will feel confident seing someone vouching for your product!<br>
-                    </p>
-                    <div class="logos">
-                        <ul class="list-unstyled">
-                            <li ><img src="assets/img/logos/adobe.png"/></li>
-                            <li ><img src="assets/img/logos/zendesk.png"/></li>
-                            <li ><img src="assets/img/logos/ebay.png"/></i>
-                            <li ><img src="assets/img/logos/evernote.png"/></li>
-                            <li ><img src="assets/img/logos/airbnb.png"/></li>
-                            <li ><img src="assets/img/logos/zappos.png"/></li>
-                        </ul>
+                    <div class="container text-center">
+                        <h4 class="header-text">No Tracking</h4>
+                        <p>
+                            We don't collect information about app usage.<br>You can rest assured that we are not watching you.
+                        </p>
                     </div>
+                    <div class="container text-center">
+                            <h4 class="header-text">No Cloud Sync</h4>
+                            <p>
+                                All your credit card data is kept on your phone.<br>We don't sync your data with any server in the cloud.
+                            </p>
+                        </div>
                 </div>
-            </div>
+            
             <div class="section section-presentation">
                 <div class="container">
                     <div class="row">
@@ -281,8 +271,5 @@
         </div>
 
     </body>
-    <!-- <script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script> -->
-    <!-- <script src="assets/js/jquery-ui-1.10.4.custom.min.js" type="text/javascript"></script> -->
-    <script src="assets/js/bootstrap.js" type="text/javascript"></script>
-    <!-- <script src="assets/js/awesome-landing-page.js" type="text/javascript"></script> -->
+
 </html>
