Add iphone X screenshot

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="row">
                         <div class="col-md-5 hidden-xs">
                             <div class="parallax-image">
-                                <img class="phone" src="assets/img/template/iphone3.png" style="margin-top: 20px"/>
+                                <img class="phone" src="assets/img/template/iphone-x.png" style="margin-top: 20px"/>
                             </div>
                         </div>
                         <div class="col-md-6 col-md-offset-1">
@@ -75,9 +75,15 @@
 
             <div class="section section-gray section-clients">
                     <div class="container text-center">
-                        <h4 class="header-text">No Tracking</h4>
+                            <h4 class="header-text">No Tracking. Complete Privacy</h4>
+                            <p>
+                                We don't collect information about app usage.<br>You can rest assured that we are not watching you.
+                            </p>
+                        </div>
+                    <div class="container text-center">
+                        <h4 class="header-text">Protected</h4>
                         <p>
-                            We don't collect information about app usage.<br>You can rest assured that we are not watching you.
+                            You can protect your vault with FaceID, TouchID and Password.
                         </p>
                     </div>
                     <div class="container text-center">
