delete unecessary files

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         <meta name="viewport" content="width=device-width" />
 
-        <link href="assets/css/bootstrap.css" rel="stylesheet" />
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
         <link href="assets/css/landing-page.css" rel="stylesheet"/>
 
     </head>
@@ -75,7 +75,7 @@
 
             <div class="section section-gray section-clients">
                     <div class="container text-center">
-                            <h4 class="header-text">No Tracking. Complete Privacy</h4>
+                            <h4 class="header-text">Complete Privacy</h4>
                             <p>
                                 We don't collect information about app usage.<br>You can rest assured that we are not watching you.
                             </p>
