add App Store link

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h5>All your credit cards protected in a single place.</h5>
                             </div>
                             <div class="buttons">
-                                <a href="#">
+                                <a href="https://itunes.apple.com/us/app/card-vault-your-card-wallet/id1378561346?ls=1&mt=8">
                                     <img src="assets/img/apple-app-store.svg" style="width: 200px;" alt="Download on the app store button">
                                 </a>
                             </div>
