--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
 
         <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
         <link href="assets/css/landing-page.css" rel="stylesheet"/>
+        <!-- Google Analytics - Tracking for visit count only. We don't collect user data in our apps -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-66025495-4"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-66025495-4');
+        </script>
 
     </head>
     <body class="landing-page landing-page1">
