fix broken links

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                     <nav class="pull-left">
                         <ul>
                             <li>
-                                <a href="http://www.bpaulino.com.br/about">
+                                <a href="http://www.bpaulino.com/about">
                                 Developer Website
                                 </a>
                             </li>
                             <li>
-                                <a href="http://www.bpaulino.com.br/">
+                                <a href="http://www.bpaulino.com/">
                                 Blog
                                 </a>
                             </li>
@@ -130,7 +130,7 @@
                         </a>
                     </div>
                     <div class="copyright">
-                        &copy; 2018 <a href="http://www.bpaulino.com.br/">Bruno Paulino</a>
+                        &copy; 2018 <a href="http://www.bpaulino.com/">Bruno Paulino</a>
                     </div>
                 </div>
             </footer>
